--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  width: 100%;
-  height: 100%;
-  margin: 0;
+  background-color: #f0f0f0;
+  color: #333;
+  font-family: Arial, Helvetica, sans-serif;
 }
